--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,6 +14,9 @@ jobs:
       uses: docker/setup-buildx-action@v1
     - uses: actions/checkout@v2.3.1
     - run: echo "::set-env name=SHORT_SHA::$(git rev-parse --short HEAD)"
+    - id: short-sha
+      run: echo "::set-output name=short-sha::$(echo git rev-parse --short HEAD)"
+      shell: bash
     - name: Login to DockerHub
       uses: docker/login-action@v1
       with:
@@ -26,4 +29,4 @@ jobs:
         push: true
         tags: |
           initeq/aws-ecr-helper:latest
-          initeq/aws-ecr-helper:$SHORT_SHA
+          initeq/aws-ecr-helper:${{ steps.short-sha.outputs.short-sha }}
