--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v2.3.1
     - run: echo "::set-env name=SHORT_SHA::$(git rev-parse --short HEAD)"
     - id: short-sha
-      run: echo "::set-output name=short-sha::$(echo git rev-parse --short HEAD)"
+      run: echo "::set-output name=short-sha::$(git rev-parse --short HEAD)"
       shell: bash
     - name: Login to DockerHub
       uses: docker/login-action@v1
