--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,24 +9,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
+      uses: docker/setup-qemu-action@v3.0.0
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-    - uses: actions/checkout@v2.3.1
-    - run: echo "::set-env name=SHORT_SHA::$(git rev-parse --short HEAD)"
-    - id: short-sha
-      run: echo "::set-output name=short-sha::$(git rev-parse --short HEAD)"
-      shell: bash
+      uses: docker/setup-buildx-action@v3.0.0
+    - uses: actions/checkout@v4.1.1
+    - name: set SHORT_SHA
+      run: echo "SHORT_SHA=$(git rev-parse --short=8 HEAD)" >> $GITHUB_ENV
     - name: Login to DockerHub
-      uses: docker/login-action@v1
+      uses: docker/login-action@v3.0.0
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Build and push
       id: docker_build
-      uses: docker/build-push-action@v2
+      uses: docker/build-push-action@v5.1.0
       with:
         push: true
         tags: |
           initeq/aws-ecr-helper:latest
-          initeq/aws-ecr-helper:${{ steps.short-sha.outputs.short-sha }}
+          initeq/aws-ecr-helper:${{ env.SHORT_SHA }}
